DPO-2409 code quality changes